# narrativeforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/compose/plans/: 2026-07-06-narrativeforge-phase1.md  2026-07-06-narrativeforge-phase2-agents.md  2026-07-06-narrativeforge-phase3-branching.md  2026-07-06-narrativeforge-phase4-graph-editor.md  2026-07-06-narrativeforge-phase5-auto-layout.md
docs/compose/specs/: 2026-07-06-narrativeforge-phase1-design.md  2026-07-06-narrativeforge-phase2-agents-design.md  2026-07-06-narrativeforge-phase3-branching-design.md  2026-07-06-narrativeforge-phase4-graph-editor-design.md  2026-07-06-narrativeforge-phase5-auto-layout-design.md
plugins/example-agent/: example_agent.py  plugin.json
src/NarrativeForge/: NarrativeForge.sln
src/NarrativeForge.Engine/: main.py  pyproject.toml
src/NarrativeForge/Engine/: config.py  main.py  pytest.ini  requirements-dev.txt  (+1 more)
tests/integration/: test_e2e.py
tests/unit/: test_agents.py  test_api.py  test_critic_agent.py  test_dialogue_agent.py  test_dialogue_tree.py  test_graph.py  test_import_manager.py  test_ink_parser.py  test_lore_agent.py  test_models.py  test_new_models.py  test_node_generation.py  test_pipeline.py  test_plugin_agents.py  test_plugin_config.py  test_plugin_manager.py  test_plugin_providers.py  test_providers.py  test_quest_agent.py  test_quest_graph.py  test_rewrite_agent.py  test_scripting.py  test_storage.py  test_story_bible_api.py  test_timeline_agent.py  test_version_api.py  test_version_manager.py  test_world_agent.py  test_yarn_parser.py
(+139 files in other folders)
